--- a/Assignments.html
+++ b/Assignments.html
@@ -30,6 +30,21 @@
 		            </div>
 		        </div>
             </div>
+        </div><br>
+
+        <div class="row">
+            <div class="col">
+                <div class="card border-warning" style="background-color: #303030; color: #D3D3D3;">
+                        <h5 class="card-header bg-warning" style="color: #303030;"> Video presentation </h5>
+                        <div class="card-body">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/qQiLYzzQmYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="card-footer" style="color: #FFC107;">
+                                All required features <strong> DONE </strong> - All extra credit features <strong> DONE </strong>
+                        </div>
+                    </div>
+                
+            </div>
         </div>
     </div>
 </body>
